terraform/aws_with_ansible/vpc.tf

resource "aws_default_vpc" "default" {}


resource "aws_security_group" "dbs_security_group" {
  name = "schedule_security_group"

  vpc_id = aws_default_vpc.default.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 6379
    to_port     = 6379
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 27017
    to_port     = 27017
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_subnet" "instances_subnet" {
  vpc_id = aws_default_vpc.default.id

  cidr_block = "172.31.10.0/24"

  tags = {
    Name = "instances-subnet"
  }
}


resource "aws_subnet" "dbs_subnet" {
  vpc_id = aws_default_vpc.default.id

  cidr_block = "172.31.20.0/24"

  tags = {
    Name = "dbs-subnet"
  }
}
